--- a/oadmin/src/main/resources/WEB-INF/css/index.styl
+++ b/oadmin/src/main/resources/WEB-INF/css/index.styl
@@ -1,15 +1,7 @@
 @import './mixin'
 
-// body
-//   color: #222
-
-// h2
-//   text-align: center
-//   font-size: 22px
-
-// p
-//   text-align: center
-//   font-size: 16px
+body
+  padding-top: 50px
 
 .navbar-form
   width: 500px
@@ -20,16 +12,17 @@
 .container .text-muted
   margin: 20px 0
 
-footer {
-position: fixed;
-bottom: 10px;
-left: 38px;
-color: #999999;
-}
+footer
+  position: fixed
+  bottom: 10px
+  left: 38px
+  color: #999999
 
-#msg {
-position: absolute;
-left: 300px;
-top: 70px;
-display: none;
-}
+#msg
+  position: absolute
+  left: 300px
+  top: 70px
+  display: none
+
+#main
+  height: 100%
