--- a/oadmin/src/main/templates/index.jade
+++ b/oadmin/src/main/templates/index.jade
@@ -12,8 +12,27 @@ html(lang="en")
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     link(rel='shortcut icon' href={uri("/assets/ico/favicon.png")})
     title Schola
-    link(href={uri("/assets/css/bootstrap.css")} rel='stylesheet' type='text/css' charset='utf-8')
-    link(rel='stylesheet' href={uri("/assets/application.css")} type='text/css' charset='utf-8')
+    link(href={uri("/assets/css/bootstrap.css")} rel='stylesheet')
+    link(rel='stylesheet' href={uri("/assets/application.css")})
+    :css
+
+      #sidebar {
+        margin: 0;
+        padding: 0;
+      }
+
+      #content {
+        margin: 0 0 30px;
+        padding: 0;
+        border: 1px solid #ccc;
+        border-top: 0;
+        min-height: 650px;
+      }
+
+      .menu {
+        margin-top: 10px;
+      }
+
   body
     .navbar.navbar-inverse.navbar-fixed-top(role='navigation')
       .container
@@ -42,15 +61,25 @@ html(lang="en")
             li
               a(href='/Logout' title='Logout')
                 span.glyphicon.glyphicon-log-out          
-    .container
-      footer
-        p © Amadou CISSE 2014.          
-    script(src={uri("/assets/application.js")} type='text/javascript' charset='utf-8')    
-    script(src={uri("/assets/javascripts/crypto/hmac-sha1.js")} type='text/javascript' charset='utf-8')
-    script(src={uri("/assets/javascripts/crypto/enc-base64-min.js")} type='text/javascript' charset='utf-8')
+    #main.container
+      .row
+        #sidebar.col-md-2
+          .menu
+            h4.menuHeader
+            .menuItems
+              ul
+                li Users
+                li Roles
+                li Stats
+        #content.col-md-10 .col-md-8      
+    footer
+      p © Amadou CISSE 2014.          
+    script(src={uri("/assets/application.js")})    
+    script(src={uri("/assets/javascripts/crypto/hmac-sha1.js")})
+    script(src={uri("/assets/javascripts/crypto/enc-base64-min.js")})
     :javascript
       var jQuery = require("jqueryify");
-    script(src={uri("/assets/javascripts/jquery.cookie.js")} type='text/javascript' charset='utf-8')
+    script(src={uri("/assets/javascripts/jquery.cookie.js")})
     script(src={uri("/assets/javascripts/jquery.upload.js")})
     script(src={uri("/assets/javascripts/bootstrap.js")})
     :&javascript
