--- a/oadmin/src/main/templates/index.jade
+++ b/oadmin/src/main/templates/index.jade
@@ -13,44 +13,24 @@ html(lang="en")
     link(rel='shortcut icon' href={uri("/assets/ico/favicon.png")})
     title Schola
     link(href={uri("/assets/css/bootstrap.css")} rel='stylesheet')
-    link(rel='stylesheet' href={uri("/assets/application.css")})
-    :css
-
-      #sidebar {
-        margin: 0;
-        padding: 0;
-      }
-
-      #content {
-        margin: 0 0 30px;
-        padding: 0;
-        border: 1px solid #ccc;
-        border-top: 0;
-        min-height: 650px;
-      }
-
-      .menu {
-        margin-top: 10px;
-      }
-
-  body
+    link(href={uri("/assets/css/bootstrap-theme.css")} rel='stylesheet')
+    link(href={uri("/assets/application.css")} rel='stylesheet')
+  body.squared
     .navbar.navbar-inverse.navbar-fixed-top(role='navigation')
       .container
         .navbar-header
           a.navbar-brand(href='/') Schola
         .collapse.navbar-collapse
           form#search.navbar-form.navbar-left(role='search')
-            .input-group
-              input.form-control.input-sm(type='text' placeholder='Search users, roles or permissions')
-              span.input-group-btn
-                button.btn.btn-primary.btn-search.btn-sm(type='submit')
-                  span.glyphicon.glyphicon-search
+            .btn-group
+              input.not-squared.form-control.input-sm(type='text' placeholder='Search users, roles or permissions')
+              span.glyphicon.glyphicon-search
           ul.nav.navbar-nav.navbar-right
             li.dropdown
               a.dropdown-toggle(href='#' data-toggle='dropdown')
                 span.glyphicon.glyphicon-wrench
                 span.caret
-              ul.dropdown-menu
+              ul.dropdown-menu(role='menu')
                 li
                   a(href='/EditAccount') Edit Account
                 li
@@ -59,22 +39,19 @@ html(lang="en")
                 li
                   a(href='#/Sessions') Sessions
             li
-              a(href='/Logout' title='Logout')
+              a(href='/Logout' data-toggle='tooltip' title='Logout')
                 span.glyphicon.glyphicon-log-out          
     #main.container
       .row
         #sidebar.col-md-2
-          .menu
-            h4.menuHeader
-            .menuItems
-              ul
-                li Users
-                li Roles
-                li Stats
-        #content.col-md-10 .col-md-8      
-    footer
-      p © Amadou CISSE 2014.          
+        #content.col-md-10
+      .row
+        .col-md-12     
+          footer.pull-right
+            p © Amadou CISSE 2014.          
+    script(src={uri("/assets/javascripts/countries.js")})
     script(src={uri("/assets/application.js")})    
+    script(src={uri("/assets/javascripts/spin.min.js")})
     script(src={uri("/assets/javascripts/crypto/hmac-sha1.js")})
     script(src={uri("/assets/javascripts/crypto/enc-base64-min.js")})
     :javascript
@@ -82,14 +59,39 @@ html(lang="en")
     script(src={uri("/assets/javascripts/jquery.cookie.js")})
     script(src={uri("/assets/javascripts/jquery.upload.js")})
     script(src={uri("/assets/javascripts/bootstrap.js")})
+    script(src={uri("/assets/javascripts/bootstrap3-typeahead.min.js")})
+    script(src={uri("http://gd.geobytes.com/gd?after=-1&variables=GeobytesCountry,GeobytesCity,GeobytesIso2")})
     :&javascript
 
       var exports = this;
 
+      function isElementInViewport(el) {
+        var rect = el.getBoundingClientRect();
+
+        return (
+          rect.top >= 0 &&
+          rect.left >= 0 &&
+          rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) && /*or $(window).height() */
+          rect.right <= (window.innerWidth || document.documentElement.clientWidth) /*or $(window).width() */
+        );
+      }        
+
+      (function($) {
+        $.fn.scrollIntoView = function() {
+          return this.each(function(){
+            if(!isElementInViewport(this)) 
+              this.scrollIntoView();
+            })
+          return this; // for chaining...
+        }
+      })(jQuery);
+      
       jQuery(function($){
+
+
         var App = require("index");
         
-        exports.app = new App({el: $(document.body)});
+        exports.app = new App;
 
         // button state demo
         //- $('#fat-btn')
@@ -103,7 +105,10 @@ html(lang="en")
 
         $('button[data-dismiss=alert]').click(function(){ $(this).parent('.alert').remove(); return false; })
 
-        $('[data-toggle=tooltip]').tooltip();
+        $(document).tooltip({
+          selector: '[data-toggle=tooltip]',
+          container: $(document.body)
+        });
 
         setTimeout(function(){
           $.removeCookie('#{schola.oadmin.libs.Flash.COOKIE_NAME}', { path: '/' });
@@ -126,7 +131,7 @@ html(lang="en")
             } catch(e) {}
 
           $(
-            ['<div id=msg class="alert ' + className + ' alert-dismissable">',
+            ['<div id=msg class="alert fade ' + className + ' alert-dismissable">',
               '<button type=button class=close data-dismiss=alert aria-hidden=true>&times;</button>',
               htm,
               '</div>'].join('')).prependTo(document.body);
