Implement user tagging in API

--- a/cl/js/views/role/tree.toolbar.jade
+++ b/cl/js/views/role/tree.toolbar.jade
@@ -4,7 +4,7 @@
       span New Role
   .btn-group
     button.refresh.btn.btn-default.btn-md(data-toggle='tooltip' data-placement='bottom' title='Refresh' type='button')
-      span.glyphicon.glyphicon-repeat
+      span.glyphicon.glyphicon-refresh
     button.selection.purge.btn.btn-default.btn-md(data-toggle='tooltip' data-placement='bottom' title='Delete' type='button')
       span.glyphicon.glyphicon-trash
   .more.btn-group
