--- a/cl/js/views/user/single.toolbar.jade
+++ b/cl/js/views/user/single.toolbar.jade
@@ -5,7 +5,7 @@
       span &nbsp; Back
   .btn-group
     button.refresh.btn.btn-default.btn-md(data-toggle='tooltip' data-placement='bottom' title='Refresh' type='button')
-      span.glyphicon.glyphicon-repeat
+      span.glyphicon.glyphicon-refresh
   .btn-group
     button.edit.btn.btn-default.btn-md(data-toggle='tooltip' data-placement='bottom' title='Edit' type='button')
       span.glyphicon.glyphicon-edit
