--- a/cl/js/views/user/list.toolbar.jade
+++ b/cl/js/views/user/list.toolbar.jade
@@ -6,7 +6,7 @@
       span New User
   .btn-group
     button.refresh.btn.btn-default.btn-md(data-toggle='tooltip' data-placement='bottom' title='Refresh' type='button')
-      span.glyphicon.glyphicon-repeat
+      span.glyphicon.glyphicon-refresh
     button.selection.purge.btn.btn-default.btn-md(data-toggle='tooltip' data-placement='bottom' title='Delete' type='button')
       span.glyphicon.glyphicon-trash
   .more.btn-group
