Fixes broken selection; many refinements to the ui; performance improvements and other fixes

--- a/cl/js/views/role/tree.toolbar.jade
+++ b/cl/js/views/role/tree.toolbar.jade
@@ -22,3 +22,4 @@
   .btn-group.filter.pull-right
     input.form-control.squared.input-md(type='text' placeholder='Search')
     span.glyphicon.glyphicon-search
+.shadow
