--- a/cl/js/views/user/list.toolbar.jade
+++ b/cl/js/views/user/list.toolbar.jade
@@ -34,3 +34,4 @@
         span.glyphicon.glyphicon-chevron-left
       button.next.btn.btn-default.btn-md(data-toggle='tooltip' data-placement='bottom' title='Next' type='button')
         span.glyphicon.glyphicon-chevron-right
+.shadow
