--- a/cl/app/views/index.scala.html
+++ b/cl/app/views/index.scala.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div role="navigation" class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+      <div class="container-fluid">
         <div class="navbar-header"><a href='@routes.Application.index' class="navbar-brand">Schola</a></div>
         <div class="collapse navbar-collapse">
           <form id="search" role="search" class="navbar-form navbar-left">
@@ -38,18 +38,18 @@
         </div>
       </div>
     </div>
-    <div id="main" class="container">
+    <div id="main" class="container-fluid">
       <div class="row">
-        <div id="sidebar" class="col-md-2"></div>
+        <div id="sidebar" role="navigation" class="col-md-2"></div>
         <div id="content" class="col-md-10"></div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-md-12">    
           <footer class="pull-right">
             <p>© Amadou CISSE 2014.</p>
           </footer>
         </div>
-      </div>
+      </div> -->
     </div>
     <script src='@routes.Assets.at("javascripts/countries.js")'></script>
     <script src='@routes.Assets.at("main.js")'>   </script>
