--- a/cl/css/index.styl
+++ b/cl/css/index.styl
@@ -1,9 +1,38 @@
 @import './mixin'
 
+html {
+min-width: 700px;
+overflow: hidden;
+/*overflow: auto;
+overflow-y: hidden;*/
+}
+
+html {
+height: 100%;
+background-color: #fff;
+}
+
+html {
+margin: 0;
+padding: 0;
+border: 0;
+vertical-align: baseline;
+}
+
+HTML {
+margin: 0 !important;
+border: none !important;
+}
+
 body
+  margin: 0
+  padding: 0
+  border: 0
+  height: 100%
   padding-top: 50px
   background: rgba(255,255,255,0.9)
-
+  vertical-align: baseline
+  overflow: visible
 
 body, td, input, textarea, select {
 font-family: arial,sans-serif;
@@ -32,17 +61,51 @@ footer
 #main
   height: 100%
 
+#main .row
+  height: 100%
+
 #sidebar {
   margin: 0;
   padding: 0;
+  padding-left: 15px;
+
+  /*position: absolute;*/
+  left: 0;
+  width: 14.8033924441%;
+
+  height: 100%;
+
+  border-top: 0; 
+  border-right: 1px solid #ebebeb;
+
+  background-color: #fff;
 }
 
 #content {
-  margin: 0 0 30px;
+  margin: 0;
   padding: 0;
-  border: 1px solid #ccc;
   border-top: 0; 
-  min-height: 650px;
+  width: 85.1966075559%;
+
+  height: 100%
+}
+
+.scrollable {
+  overflow: auto;
+  overflow-x: hidden;
+}
+
+.shadow {
+width: 100%;
+margin-right: 0;
+height: 8px;
+position: absolute;
+/*top: 60px;*/
+left: 0;
+opacity: 0;
+border-top: 1px solid rgba(0, 0, 0, 0.4);
+background: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,.2)), to(rgba(0,0,0,0)));
+-webkit-mask-box-image: -webkit-gradient(linear, left top, right top, color-stop(0.0, rgba(0,0,0,0)), color-stop(0.5, rgba(0,0,0,.8)), color-stop(1.0, rgba(0,0,0,0)));
 }
 
 .menu {
@@ -72,9 +135,14 @@ ul.menuItems li {
   list-style: none;
   padding: 1px 0;
   margin: 0;
-  -webkit-padding-start: 6px;
-  -moz-padding-start: 6px;
   cursor: pointer;
+}
+
+.menuItem.loading a {
+outline: thin dotted;
+outline: 5px auto -webkit-focus-ring-color;
+outline-offset: -2px;
+color: #d14836;
 }
 
 ul.menuItems a {
@@ -83,15 +151,19 @@ ul.menuItems a {
   color: #333;
   display: block;
 
+  -webkit-padding-start: 6px;
+  -moz-padding-start: 6px;  
+
   outline: 0;
 }
 
 ul.menuItems li.active .title{
   font-weight: bold;
+  color: #d14836;  
 }
 
 ul.menuItems li.active {
-  background-color: #d8dfea;        
+  /*background-color: #d8dfea; */
 }
 
 ul.menuItems li:hover {
@@ -131,13 +203,13 @@ ul.menuItems .title {
 }
 
 .menuItem.loading .spinner {
-  display: inline-block;
+  /*display: inline-block;*/
 }  
 
 .toolbar {
 margin: 0;
-padding: 10px 10px 20px;
-border-bottom: 1px solid #ccc;
+padding: 10px 10px 15px;
+border-bottom: 1px solid #ebebeb;
 }
 
 .toolbar .new{
@@ -161,7 +233,7 @@ float: right;
 }
 
 .toolbar .more {
-padding-left: 45px;
+margin-left: 45px;
 }
 
 .toolbar .btn {
@@ -218,23 +290,30 @@ background-color: rgba(255,255,255,.65);
 padding: 0;
 margin: 0;
 
-vertical-align: middle;
-border-color: inherit;
+vertical-align: baseline;
 
 display: table;
-
-height: 100%;
 }
 
 .roles .tree {
 }
 
+.scrollable {
+overflow-y: auto;
+zoom: 1;
+
+-webkit-overflow-scrolling: touch;
+}
+
 .users .list {
 width: 100%;
+
+position: relative;
+padding: 0 10px;
 }
 
 .users .list *{
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 .users .list *,
@@ -438,6 +517,7 @@ box-sizing: border-box;
 
 .users form .it {
 padding: 15px;
+height: 600px;
 }
 
 .users form #gender .radio-inline{
@@ -557,6 +637,10 @@ margin-left: -40px;
 
 .toolbar .back .glyphicon {
 font-size: 18px;
+}
+
+[role=navigation] .container-fluid {
+margin: auto 30px;
 }
 
 /* --------------------------------------------------------- */
@@ -736,4 +820,34 @@ padding-left: 7px;
 
 .stack > *:not(.active) {
   display: none
+}
+
+/* Scroll bar */
+
+::-webkit-scrollbar {
+width: 16px;
+height: 16px;
+}
+
+::-webkit-scrollbar-thumb {
+min-height: 28px;
+padding-top: 100px;
+border-left: 6px solid transparent;
+border-right: 1px solid transparent;
+border-top: 0 solid transparent;
+border-bottom: 0 solid transparent;
+background-clip: padding-box;
+background-color: rgba(0, 0, 0, 0.2);
+-webkit-box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1), inset 0 -1px 0 rgba(0, 0, 0, 0.07);
+}
+
+::-webkit-scrollbar-button {
+height: 0;
+width: 0;
+}
+
+::-webkit-scrollbar-track {
+border-left: 6px solid transparent;
+border-right: 1px solid transparent;
+background-clip: padding-box;
 }
