--- a/cl/js/views/user/form.toolbar.jade
+++ b/cl/js/views/user/form.toolbar.jade
@@ -9,3 +9,4 @@
     button.save.btn.btn-primary.btn-md(data-toggle='tooltip' data-placement='bottom' data-saving-text='Saving...' title='Save' type='button')
       span.spin
       span Save
+.shadow
