--- a/cl/public/main.css
+++ b/cl/public/main.css
@@ -1,6 +1,32 @@
+html {
+  min-width: 700px;
+  overflow: hidden;
+/*overflow: auto;
+overflow-y: hidden;*/
+}
+html {
+  height: 100%;
+  background-color: #fff;
+}
+html {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  vertical-align: baseline;
+}
+HTML {
+  margin: 0 !important;
+  border: none !important;
+}
 body {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  height: 100%;
   padding-top: 50px;
   background: rgba(255,255,255,0.9);
+  vertical-align: baseline;
+  overflow: visible;
 }
 body,
 td,
@@ -30,16 +56,43 @@ footer {
 #main {
   height: 100%;
 }
+#main .row {
+  height: 100%;
+}
 #sidebar {
   margin: 0;
   padding: 0;
+  padding-left: 15px;
+/*position: absolute;*/
+  left: 0;
+  width: 14.8033924441%;
+  height: 100%;
+  border-top: 0;
+  border-right: 1px solid #ebebeb;
+  background-color: #fff;
 }
 #content {
-  margin: 0 0 30px;
+  margin: 0;
   padding: 0;
-  border: 1px solid #ccc;
   border-top: 0;
-  min-height: 650px;
+  width: 85.1966075559%;
+  height: 100%;
+}
+.scrollable {
+  overflow: auto;
+  overflow-x: hidden;
+}
+.shadow {
+  width: 100%;
+  margin-right: 0;
+  height: 8px;
+  position: absolute;
+/*top: 60px;*/
+  left: 0;
+  opacity: 0;
+  border-top: 1px solid rgba(0,0,0,0.4);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.2)), to(rgba(0,0,0,0)));
+  -webkit-mask-box-image: -webkit-gradient(linear, left top, right top, color-stop(0, rgba(0,0,0,0)), color-stop(0.5, rgba(0,0,0,0.8)), color-stop(1, rgba(0,0,0,0)));
 }
 .menu {
   margin-top: 20px;
@@ -63,22 +116,26 @@ ul.menuItems li {
   list-style: none;
   padding: 1px 0;
   margin: 0;
-  -webkit-padding-start: 6px;
-  -moz-padding-start: 6px;
   cursor: pointer;
+}
+.menuItem.loading a {
+  outline: thin dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+  color: #d14836;
 }
 ul.menuItems a {
   -webkit-user-select: none;
   text-decoration: none;
   color: #333;
   display: block;
+  -webkit-padding-start: 6px;
+  -moz-padding-start: 6px;
   outline: 0;
 }
 ul.menuItems li.active .title {
   font-weight: bold;
-}
-ul.menuItems li.active {
-  background-color: #d8dfea;
+  color: #d14836;
 }
 ul.menuItems li:hover {
   background-color: #eff2f7;
@@ -119,13 +176,10 @@ ul.menuItems .title {
   -webkit-animation: rotateSpinner 1.2s linear infinite;
   -moz-animation: rotateSpinner 1.2s linear infinite;
 }
-.menuItem.loading .spinner {
-  display: inline-block;
-}
 .toolbar {
   margin: 0;
-  padding: 10px 10px 20px;
-  border-bottom: 1px solid #ccc;
+  padding: 10px 10px 15px;
+  border-bottom: 1px solid #ebebeb;
 }
 .toolbar .new {
   margin-right: 25px;
@@ -141,7 +195,7 @@ ul.menuItems .title {
   float: right;
 }
 .toolbar .more {
-  padding-left: 45px;
+  margin-left: 45px;
 }
 .toolbar .btn {
   font-weight: bolder;
@@ -184,16 +238,18 @@ ul.menuItems .title {
 .roles .tree {
   padding: 0;
   margin: 0;
-  vertical-align: middle;
-  border-color: inherit;
+  vertical-align: baseline;
   display: table;
-  height: 100%;
+}
+.scrollable {
+  overflow-y: auto;
+  zoom: 1;
+  -webkit-overflow-scrolling: touch;
 }
 .users .list {
   width: 100%;
-}
-.users .list * {
-  overflow: hidden;
+  position: relative;
+  padding: 0 10px;
 }
 .users .list *,
 .roles .tree * {
@@ -363,6 +419,7 @@ select.squared {
 }
 .users form .it {
   padding: 15px;
+  height: 600px;
 }
 .users form #gender .radio-inline {
   margin-top: 3px;
@@ -458,6 +515,9 @@ select.squared {
 }
 .toolbar .back .glyphicon {
   font-size: 18px;
+}
+[role=navigation] .container-fluid {
+  margin: auto 30px;
 }
 /* --------------------------------------------------------- */
 .modal-content {
@@ -596,4 +656,29 @@ select.squared {
 /* Trees */
 .stack > *:not(.active) {
   display: none;
+}
+/* Scroll bar */
+::-webkit-scrollbar {
+  width: 16px;
+  height: 16px;
+}
+::-webkit-scrollbar-thumb {
+  min-height: 28px;
+  padding-top: 100px;
+  border-left: 6px solid transparent;
+  border-right: 1px solid transparent;
+  border-top: 0 solid transparent;
+  border-bottom: 0 solid transparent;
+  background-clip: padding-box;
+  background-color: rgba(0,0,0,0.2);
+  -webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,0.1), inset 0 -1px 0 rgba(0,0,0,0.07);
+}
+::-webkit-scrollbar-button {
+  height: 0;
+  width: 0;
+}
+::-webkit-scrollbar-track {
+  border-left: 6px solid transparent;
+  border-right: 1px solid transparent;
+  background-clip: padding-box;
 }
